gateways/envoy/manifests/reference-grant.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-envoy-gw-to-cp-certs
  namespace: apim-cp
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: Gateway
    namespace: apim-gw-envoy
  to:
  - group: ""
    kind: Secret
    name: wso2-wildcard-tls
