gateways/envoy/manifests/loadbalancer.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: envoy-gateway-lb
  namespace: apim-gw-envoy
spec:
  type: LoadBalancer
  selector:
    gateway.envoyproxy.io/owning-gateway-name: envoy-federated-gateway
    gateway.envoyproxy.io/owning-gateway-namespace: apim-gw-envoy
  ports:
  - name: http
    port: 9080
    targetPort: 9080
    protocol: TCP
  - name: https
    port: 9443
    targetPort: 9443
    protocol: TCP
