gateways/envoy/manifests/test-echo.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: echo-envoy
  namespace: apim-gw-envoy
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: echo-envoy
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-envoy
  namespace: apim-gw-envoy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-envoy
  template:
    metadata:
      labels:
        app: echo-envoy
    spec:
      containers:
      - name: echo
        image: ealen/echo-server:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 10m
            memory: 32Mi
          limits:
            cpu: 100m
            memory: 64Mi
