gateways/envoy/manifests/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo-route
  namespace: apim-gw-envoy
spec:
  parentRefs:
  - name: envoy-federated-gateway
    namespace: apim-gw-envoy
  hostnames:
  - "envoy.wso2.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /echo
    backendRefs:
    - name: echo-envoy
      port: 8080
